--- a/game_client/src/index.css
+++ b/game_client/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+canvas {
+  top:0px;
+  left:0px;
+  width: 100vw;
+  height: 85vh;
+  margin: 0;
+  padding: 0;
+}
